# dlta_coursebook

./: .buildinfo  .gitignore  00_welcome.html  01_wording_preprocessing.html  02_frequency_dictionary_models 2.html  02_frequency_dictionary_models.html  03_financial_words_analysis.html  03_neural_networks.html  04_neural_networks.html  04_word_embeddings.html  05_document_embeddings.html  05_word_embeddings.html  06_document_embeddings.html  06_transformer.html  07_bert.html  07_encoder.html  07_text_analysis_finance.html  07_transformer.html  08_bert.html  08_decoder.html  08_text_analysis_finance.html  08_transformer.html  09_case_study_8k.html  09_text_analysis_finance.html  10_case_study_8k.html  99_old_content.html  genindex.html  objects 2.inv  pyproject.toml  search.html  searchindex.js
_sources/: 00_welcome.ipynb  01_wording_preprocessing.ipynb  02_frequency_dictionary_models.ipynb  03_financial_words_analysis.ipynb  03_neural_networks.ipynb  05_word_embeddings.ipynb  06_document_embeddings.ipynb  06_transformer.ipynb  08_bert.ipynb  08_decoder.ipynb  08_transformer.ipynb  09_text_analysis_finance.ipynb  10_case_study_8k.ipynb  99_old_content.ipynb
coursebook/: 00_welcome.ipynb  01_wording_preprocessing.ipynb  02_frequency_dictionary_models.ipynb  03_financial_words_analysis.ipynb  03_neural_networks.ipynb  04_neural_networks.ipynb  04_word_embeddings.ipynb  05_word_embeddings.ipynb  06_document_embeddings.ipynb  07_text_analysis_finance.ipynb  08_decoder.ipynb  09_text_analysis_finance.ipynb  10_case_study_8k.ipynb  _config.yml  _toc.yml  ec_helper_function.py  utils.py
coursebook/_build/.doctrees/: 00_welcome.doctree  01_wording_preprocessing 2.doctree  01_wording_preprocessing.doctree  021_financial_analysis.doctree  02_frequency_dictionary_models 2.doctree  02_frequency_dictionary_models.doctree  03_financial_words_analysis.doctree  03_neural_networks.doctree  04_neural_networks.doctree  06_transformer 2.doctree  06_transformer.doctree  07_bert.doctree  07_encoder.doctree  07_text_analysis_finance.doctree  07_transformer.doctree  08_bert.doctree  08_decoder 2.doctree  08_decoder.doctree  (+9 more)
tex/: dlta.tex
yt/: 01_preprocess_text.ipynb  02_word_frequencies.ipynb  03_neural_networks.ipynb  04_word2vec.ipynb  05_w2v_training.ipynb
(+76 files in other folders)
