[tool.poetry]
name = "dlta"
version = "0.1.0"
description = ""
authors = ["Ralf <ralf.kellner@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.9.1"
gensim = "^4.3.3"
pandas = "^2.2.3"
wordcloud = "^1.9.4"
tokenizers = "^0.20.3"
ipykernel = "^6.29.5"
textblob = "^0.18.0.post0"
pysentiment2 = "^0.1.1"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
pyfixest = "^0.26.2"
plotly = "^5.24.1"
torch = "^2.5.1"
umap-learn = "^0.5.7"
scipy = "1.13"
transformers = "^4.46.3"
datasets = "^3.1.0"
hdbscan = "^0.8.40"
optuna = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
