[project]
name = "dlta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "datasets>=3.2.0",
    "gensim>=4.3.3",
    "hdbscan>=0.8.40",
    "lxml>=5.3.0",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pdfminer-six>=20240706",
    "plotly>=5.24.1",
    "pyfixest>=0.28.0",
    "pymupdf>=1.25.2",
    "pysentiment2>=0.1.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "textblob>=0.19.0",
    "tokenizers>=0.21.0",
    "torch>=2.5.1",
    "transformers>=4.48.1",
    "umap-learn>=0.5.7",
    "wordcloud>=1.9.4",
]

[dependency-groups]
dev = [
    "ghp-import>=2.1.0",
    "ipykernel>=6.29.5",
    "jupyter-book>=1.0.3",
]
